Use ThradFactoryBuidlers to create out ThreadFactory instances (#1965)